// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToolbarButton /> iconButton is rendered - default 1`] = `
<button
  as="iconButton"
  class="euiButtonIcon emotion-euiButtonIcon-m-base-text"
  intl="[object Object]"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="rocket"
  />
</button>
`;

exports[`<ToolbarButton /> standard is rendered - default 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-text"
  intl="[object Object]"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate css-13ifi6d-m"
    >
      Create chart
    </span>
    <span
      color="inherit"
      data-euiicon-type="chevronSingleDown"
    />
  </span>
</button>
`;

exports[`<ToolbarButton /> standard is rendered - primary 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
  intl="[object Object]"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate css-13ifi6d-m"
    >
      Create chart
    </span>
    <span
      color="inherit"
      data-euiicon-type="chevronSingleDown"
    />
  </span>
</button>
`;

exports[`<ToolbarButton /> standard is rendered - text wth icon 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
  intl="[object Object]"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      color="inherit"
      data-euiicon-type="plusCircle"
    />
    <span
      class="eui-textTruncate css-13ifi6d-m"
    >
      Create chart
    </span>
  </span>
</button>
`;
